Add EPL Analyst notebook

--- a/EPL Analyst.ipynb
+++ b/EPL Analyst.ipynb
@@ -589,7 +589,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "949628f1-3bfd-4628-8801-3ed9cdde103c",
+   "id": "b4272a0f-c679-45f8-8ecb-8a8049117254",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. เริ่ม Git (ถ้ายังไม่ init)\n",
+    "!git init && echo \"✅ git init done\"\n",
+    "\n",
+    "# 2. เพิ่มไฟล์ .ipynb\n",
+    "!git add \"EPL Analyst.ipynb\" && echo \"✅ added notebook\"\n",
+    "\n",
+    "# 3. Commit พร้อมข้อความ\n",
+    "!git commit -m \"Add EPL Analyst notebook\" && echo \"✅ committed\"\n",
+    "\n",
+    "# 4. เชื่อมกับ GitHub repo (ถ้ามี origin อยู่แล้ว ให้ใช้ set-url)\n",
+    "!git remote set-url origin https://github.com/SALM0Ns/-Premier-League-2023-2024-Pridiction.git && echo \"✅ remote set\"\n",
+    "\n",
+    "# 5. Push ขึ้น GitHub\n",
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1295eb0d-681e-4ba4-8762-a9f268a64222",
    "metadata": {},
    "outputs": [],
    "source": []
